--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.0",
+    "cheerio": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "csv-parser": "^3.0.0",
     "dayjs": "^1.11.13",
     "mongoose": "^8.6.0",
+    "pdfkit": "^0.15.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "svg-to-pdfkit": "^0.1.8"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
